Fixed Scrolling Of Portfolio On Mobile Devices

--- a/ProjectHolgenberg/ClientApp/src/components/Portfolio.css
+++ b/ProjectHolgenberg/ClientApp/src/components/Portfolio.css
@@ -12,3 +12,12 @@
     background-repeat: no-repeat;
     background-size: cover;
 }
+
+@media (max-width: 426px ) {
+    .Portfolio{
+        overflow: auto;
+        height: 100%;
+    }
+}
+
+
